# pycourse

./: pyproject.toml
notebooks/: explore-data-wrap.ipynb  explore-data.ipynb  plotting.ipynb  syntax-basics.ipynb  violin.ipynb
src/pycourse/: __init__.py  pipeline.py
