[project]
name = "pycourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabrizio Damicelli", email = "fabridamicelli@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "jupyterlab-vim>=4.1.4",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "mne>=1.8.0",
    "scikit-image>=0.24.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
